# mpalgo

./: Cargo.toml  README.md
src/: main.rs  mpa.rs
