[package]
name = "mpalgo"
version = "0.1.0"
authors = ["SaadDAHMANI <sd.dahmani2000@gmail.com; s.dahmani@univ-bouira.dz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
special = "0.8.1"
rand_distr = "0.4.1"



